# cwe_checker

./: .build_cwe_checker_travis.sh  .build_testcases_travis.sh  .dockerignore  .gitignore  .merlin  .ocp-indent  .pre-commit-config.yaml  .travis.yml  .travis_prepare.sh  .travis_run_tests.sh  CHANGES.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Makefile  README.md  bap.Dockerfile  cwe_checker.opam  dune  dune-project  flake.nix  ghidra.Dockerfile  index.html  index.mld  install.sh
caller/: dune  (+3 more)
cwe_checker_rs/: Cargo.toml
cwe_checker_rs/src/: checkers.rs  lib.rs
cwe_checker_rs/src/abstract_domain/: bitvector.rs  data.rs  identifier.rs  mem_region.rs  mod.rs  pointer.rs
cwe_checker_rs/src/analysis/: abstract_domain.rs  backward_interprocedural_fixpoint.rs  fixpoint.rs  forward_interprocedural_fixpoint.rs  graph.rs  interprocedural_fixpoint.rs  interprocedural_fixpoint_generic.rs  mem_region.rs  mod.rs  pointer_inference.rs
cwe_checker_rs/src/analysis/backward_interprocedural_fixpoint/: mock_context.rs  mod.rs  tests.rs
cwe_checker_rs/src/analysis/pointer_inference/: context.rs  data.rs  identifier.rs  mod.rs  object.rs  object_list.rs  state.rs
cwe_checker_rs/src/bil/: mod.rs  variable.rs
cwe_checker_rs/src/checkers/: cwe_190.rs  cwe_215.rs  cwe_243.rs  cwe_332.rs  cwe_367.rs  cwe_426.rs  cwe_467.rs  cwe_476.rs  cwe_560.rs  cwe_676.rs  cwe_78.rs  cwe_782.rs
cwe_checker_rs/src/checkers/cwe_476/: context.rs  state.rs  taint.rs
cwe_checker_rs/src/checkers/cwe_78/: context.rs  state.rs  taint.rs
cwe_checker_rs/src/ffi/: analysis.rs  mod.rs  serde.rs
cwe_checker_rs/src/intermediate_representation/: expression.rs  mod.rs  term.rs  variable.rs
cwe_checker_rs/src/intermediate_representation/expression/: builder.rs  tests.rs
cwe_checker_rs/src/intermediate_representation/term/: builder.rs
cwe_checker_rs/src/pcode/: expressions.rs  mod.rs  term.rs
cwe_checker_rs/src/pcode/term/: tests.rs
cwe_checker_rs/src/term/: mod.rs  symbol.rs
cwe_checker_rs/src/utils/: binary.rs  fast_cmp_arc.rs  graph_utils.rs  log.rs  mod.rs  symbol_utils.rs
src/: config.json  cwe_checker.ml  cwe_checker_core.opam  cwe_checker_emulation.ml  cwe_checker_static.ml  dune  lkm_config.json  lkm_config.json.bk  main.ml  main.mli
src/analysis/: check_path.ml  check_path.mli  mem_region.ml  mem_region.mli  pointer_inference.ml  pointer_inference.mli  type_inference.ml  type_inference.mli
src/caller/: Cargo.toml  cwe_checker.ml  cwe_checker.mli  cwe_cmd.json  helper_functions.ml  helper_functions.mli
src/caller/src/: main.rs
src/checkers/: cwe_190.ml  cwe_190.mli  cwe_215.ml  cwe_215.mli  cwe_243.ml  cwe_243.mli  cwe_248.ml  cwe_248.mli  cwe_332.ml  cwe_332.mli  cwe_367.ml  cwe_367.mli  cwe_426.ml  cwe_426.mli  cwe_457.ml  cwe_457.mli  cwe_467.ml  cwe_467.mli  cwe_476.ml  cwe_476.mli  cwe_560.ml  cwe_560.mli  cwe_676.ml  cwe_676.mli  cwe_782.ml  cwe_782.mli  memory_cwes.ml  memory_cwes.mli
src/cwe_checker_lib/: Cargo.toml
src/cwe_checker_lib/benches/: benchmarks.rs
src/cwe_checker_lib/src/: checkers.rs  lib.rs
src/cwe_checker_lib/src/abstract_domain/: bitvector.rs  bricks.rs  character_inclusion.rs  data.rs  domain_map.rs  identifier.rs  interval.rs  mem_region.rs  mod.rs  pointer.rs  strings.rs
src/cwe_checker_lib/src/analysis/: callgraph.rs  fixpoint.rs  forward_interprocedural_fixpoint.rs  graph.rs  interprocedural_fixpoint_generic.rs  mod.rs
src/cwe_checker_lib/src/bil/: mod.rs
src/cwe_checker_lib/src/checkers/: cwe_134.rs  cwe_190.rs  cwe_215.rs  cwe_243.rs  cwe_252.rs  cwe_332.rs  cwe_337.rs  cwe_367.rs  cwe_426.rs  cwe_467.rs  cwe_476.rs  cwe_560.rs  cwe_676.rs  cwe_78.rs  cwe_782.rs  cwe_789.rs  string_check.rs
src/cwe_checker_lib/src/ffi/: analysis.rs  mod.rs
src/cwe_checker_lib/src/ghidra_pcode/: mod.rs  pcode_op_simple.rs  pcode_operations.rs  tests.rs
src/cwe_checker_lib/src/intermediate_representation/: bitvector.rs  blk.rs  def.rs  expression.rs  jmp.rs  macros.rs  mod.rs  program.rs  project.rs  runtime_memory_image.rs  sub.rs  term.rs  variable.rs
src/cwe_checker_lib/src/pcode/: expressions.rs  mod.rs  subregister_substitution.rs  term.rs
src/cwe_checker_lib/src/pipeline/: mod.rs  results.rs
src/cwe_checker_lib/src/term/: symbol.rs
src/cwe_checker_lib/src/utils/: arguments.rs  binary.rs  debug.rs  ghidra.rs  graph_utils.rs  log.rs  mod.rs  symbol_utils.rs
src/ghidra/p_code_extractor/: Block.java  BlockSimple.java  CallingConvention.java  CallingConventionSimple.java  DatatypeProperties.java  ExternFunction.java  ExternFunctionSimple.java  Function.java  FunctionSimple.java  Instruction.java  InstructionSimple.java  PcodeExtractor.java  PcodeOp.java  PcodeOpSimple.java  PcodeProject.java  ProjectSimple.java  RegisterProperties.java  Varnode.java  VarnodeSimple.java
src/ghidra/p_code_extractor/bil/: DatatypeProperties.java  ExecutionType.java  Expression.java  Variable.java
src/ghidra/p_code_extractor/internal/: HelperFunctions.java  JumpProcessing.java  ParseCspecContent.java  PcodeBlockData.java  RegisterConvention.java  (+1 more)
src/installer/: Cargo.toml
src/installer/src/: main.rs
src/utils/: address_translation.ml  address_translation.mli  cconv.ml  cconv.mli  graph_utils.ml  graph_utils.mli  json_utils.ml  json_utils.mli  log_utils.ml  log_utils.mli  registers.json  serde_json.ml  serde_json.mli  support_functions.ml  support_functions.mli  symbol_utils.ml  symbol_utils.mli
test/unit/: Makefile  compile_testfile.sh  cwe_checker_unit_tests.ml  dune  mem_region_test.ml  mem_region_test.mli  specify_test_files_for_compilation.sh  unit_tests.ml  unit_tests_cwe_checker.ml
test/unit/analysis/: mem_region_test.ml  type_inference_test.ml  type_inference_test.mli
test/unit/checkers/: cwe_476_test.ml  cwe_560_test.ml  cwe_560_test.mli
test/unit/testfiles/: arrays.c  c_constructs.c
test/unit/utils/: address_translation_test.ml  address_translation_test.mli  cconv_test.ml  cconv_test.mli  json_utils_test.ml  parse_dyn_syms_test.ml  parse_dyn_syms_test.mli  serde_json_test.ml  serde_json_test.mli  symbol_utils_test.ml
(+1066 files in other folders)
