opam-version: "2.0"
name: "cwe_checker"
version: "0.2"
synopsis: "BAP plugin collection to detect common bug classes"
description: """
cwe_checker is a suite of tools to detect common bug classes such as use of dangerous functions and simple integer overflows. These bug classes are formally known as Common Weakness Enumerations (CWEs).
"""
maintainer: "CWE_checker Team <nils-edvin.enkelmann@fkie.fraunhofer.de>"
authors: [ "Thomas Barabosch <thomas.barabosch@fkie.fraunhofer.de>" "Nils-Edvin Enkelmann <nils-edvin.enkelmann@fkie.fraunhofer.de>" ]
license: "LGPL-3.0"
homepage: "https://github.com/fkie-cad/cwe_checker"
bug-reports: "https://github.com/fkie-cad/cwe_checker/issues"
dev-repo: "git+https://github.com/fkie-cad/cwe_checker"
depends: [
  "ocaml" {>= "4.05"}
  "dune" {>= "1.6"}
  "yojson" {>= "1.6.0"}
  "bap" {>= "1.6"}
  "alcotest" {>= "0.8.3"}
  "core_kernel" {>= "v0.11" & < "v0.12"}
  "ppx_jane" {>= "v0.11" & < "v0.12"}
  "odoc" {>= "1.4"}
]
depexts: [
  "binutils"
]
build: [
  [ "dune" "build" "--profile" "release" ]
]
install: [
  [ make "uninstall" ]
  [ make "clean" ]
  [ make "all" ]
]
remove: [
  [ make "uninstall" ]
  [ make "clean" ]
]
