[package]
name = "cwe_checker_rs"
version = "0.1.0"
authors = ["Nils-Edvin Enkelmann <nils-edvin.enkelmann@fkie.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apint = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ocaml = "0.9.2"
parse_int = "0.4"

[lib]
name = "cwe_checker_rs"
crate-type = ["staticlib", "cdylib"]
