opam-version: "2.0"
name: "cwe_checker_core"
version: "0.2"
synopsis: "Core library for the cwe_checker package"
description: """
Core library for the cwe_checker suite of tools.
"""
maintainer: "CWE_checker Team <firmware-security@fkie.fraunhofer.de>"
authors: [ "Thomas Barabosch <thomas.barabosch@fkie.fraunhofer.de>" "Nils-Edvin Enkelmann <nils-edvin.enkelmann@fkie.fraunhofer.de>" ]
license: "LGPL-3.0"
homepage: "https://github.com/fkie-cad/cwe_checker"
bug-reports: "https://github.com/fkie-cad/cwe_checker/issues"
dev-repo: "git+https://github.com/fkie-cad/cwe_checker"
depends: [
  "ocaml" {>= "4.05"}
  "dune" {>= "1.5"}
  "yojson" {>= "1.4.1"}
  "bap" {>= "1.6"}
  "core_kernel" {>= "v0.11" & < "v0.12"}
  "ppx_jane" {>= "v0.11" & < "v0.12"}
]
depexts: [
  "binutils"
]
build: [
  [ "dune" "build" "--profile" "release" ]
]
install: [
  [ "dune" "install" ]
]
remove: [
  [ "dune" "uninstall" ]
]
