(library
  (name cwe_checker_core)
  (public_name cwe_checker_core)
  (libraries
  yojson
  bap
  bap-api
  bap-abi
  core_kernel
  ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_jane ppx_deriving_yojson))
  (foreign_archives cwe_checker_rs)
  (c_library_flags (-lpthread -lc -lm)) ; needed for linking the Rust runtime
)

(include_subdirs unqualified) ; Include all subdirs when looking for source files
