[package]
name = "cwe_checker"
version = "0.8.0"
authors = ["Nils-Edvin Enkelmann <firmware-security@fkie.fraunhofer.de>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
cwe_checker_lib = { path = "../cwe_checker_lib" }
serde_json = "1.0"
directories = "5.0.1"
anyhow = "1.0"