(executable
  (name unit_tests_cwe_checker)
  (libraries
  alcotest
  yojson
  bap
  cwe_checker_core
  core_kernel)
  (preprocess (pps ppx_jane))
)

(include_subdirs unqualified) ; Include all subdirs when looking for source files

(alias
 (name runtest)
 (deps unit_tests_cwe_checker.exe)
(action (run %{deps} --color=always)))
